# torch-harmonics-healpix

./: .gitignore  AGENTS.md  ALTERNATIVES.md  ARCHITECTURE.md  BENCHMARKS.md  GPU_USAGE.md  HF_MODEL_CARD.md  README.md  debug_sht.slurm  debug_sht2.slurm  pyproject.toml  run_train_test1.slurm
docs/: n128_results.md
results/: mcmc_test1_popeye.json  mcmc_test2_popeye.json  mcmc_test3_popeye.json  test1_spectralcnn_v1.json  test1_spectralcnn_v2.json  test1_v2_fix_noise0.json  test1_v2_fix_noise10.json  test1_v2_fix_noise15.json  test1_v2_fix_noise5.json  test1_v2_noise0.json  test1_v2_noise10.json  test1_v2_noise15.json  test1_v2_noise5.json  test1_v3_noise0.json  test1_v3_noise10.json  test1_v3_noise15.json  test1_v3_noise5.json  test2_v2_fix_fsky0.05.json  test2_v2_fix_fsky0.1.json  test2_v2_fix_fsky0.2.json  test2_v2_fix_fsky0.5.json  test2_v2_fix_fsky1.0.json  test2_v2_fsky0.05.json  test2_v2_fsky0.1.json  test2_v2_fsky0.2.json  test2_v2_fsky0.5.json  test2_v2_fsky1.0.json  test3_v2_fix.json  test4_cnn_fiducial_fsky0.1_noise0.json  test4_cnn_fiducial_fsky0.1_noise6.json  test4_cnn_fiducial_fsky1.0_noise0.json  test4_cnn_fiducial_fsky1.0_noise6.json  test4_fisher_fsky0.1_noise0.json  test4_fisher_fsky0.1_noise6.json  test4_fisher_fsky1.0_noise0.json  test4_fisher_fsky1.0_noise6.json  test4_fisher_nside128_fsky0.1_noise0.json  test4_fisher_nside128_fsky0.1_noise6.json  test4_fisher_nside128_fsky1.0_noise0.json  test4_fisher_nside128_fsky1.0_noise6.json  (+9 more)
results_v3/: camb_cache_test3_v3.fits  cnn_vs_fisher_corrected.json  cnn_vs_fisher_summary.json  r_bias_analysis.md  (+103 more)
(+172 files in other folders)
